[package]
name = "rplus"
version = "0.1.0"
authors = ["t56k <txnash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde_derive = "1.0"
serde = "1.0"
diesel = { version = "2.0.0-rc.0", features = ["postgres", "r2d2"] }
